BUG 1354660, 1354438, 1353892, 1354648: Bug fixes * Fix script error when hovering over checkbox/stars while grid reloads (such as auto-filter) * Fix star wrapping in IE7 when the column is too narrow * Make auto-filter menu reload when opening it after changing a value in the grid * Hide scrollbar in custom combo in Chrome
QA:
* Make sure bugs are fixed

--- a/public/stylesheets/combo.css
+++ b/public/stylesheets/combo.css
@@ -47,7 +47,6 @@
 .blist-combo-wrapper.lr_justified .blist-combo-value,
 .blist-combo-wrapper.lr_justified li
 {
-    overflow: auto;
     clear: both;
 }
 
