--- a/public/stylesheets/table-core.css
+++ b/public/stylesheets/table-core.css
@@ -259,6 +259,12 @@ img.blist-table-option-icon
     background-image: url(/stylesheets/images/content/table/check.png);
 }
 
+.blist-tstars-render-wrapper
+{
+    display: inline-block;
+    padding-left: 11px;
+}
+
 .blist-tstars-wrapper
 {
     overflow: hidden;
@@ -295,9 +301,13 @@ div.blist-star-0,
     background-repeat: no-repeat;
     cursor: pointer;
     display: inline-block;
-    float: left;
     height: 16px;
     width: 11px;
+}
+div.blist-star-0
+{
+    float: left;
+    margin-left: -11px;
 }
 .blist-table-editor.type-stars .star.star-clear
 { background-image: url(/stylesheets/images/content/table/small_x.png); }
